--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,12 @@
     <string name="actionLogoutFacebook">Facebook Logout</string>
     <string name="facebook_app_id">711450142632772</string>
     <string name="hello">Hello:</string>
-    <string name="logout">Logout</string>
+    <string name="facebook_logout">Facebook Logout</string>
+    <string name="facebook_pictures_download">Facebook Pictures Download</string>
     <string name="logging_in">Logging in...</string>
+    <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
+    <string name="FLICKR_API_TAGS">android,oreo</string>
+    <string name="FLICKR_API_LANG">en-us</string>
+    <string name="flickr_pictures_download">Flickr Pictures Download</string>
+    <string name="my_friend">My Friend</string>
 </resources>
