--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Bildalbum</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
     <string name="actionLogoutFacebook">Facebook Logout</string>
     <string name="facebook_app_id">711450142632772</string>
     <string name="hello">Hello:</string>
@@ -11,11 +11,12 @@
     <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
     <string name="FLICKR_API_TAGS">android,oreo</string>
     <string name="FLICKR_API_LANG">en-us</string>
-    <string name="flickr_pictures_download">Flickr Pictures Download</string>
+    <string name="flickr_images_download">Flickr Pictures Download</string>
     <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
-    <string name="pixabay_pictures_download">Pixabay Pictures Download</string>
+    <string name="pixabay_images_download">Pixabay Pictures Download</string>
     <string name="my_friend">My Friend</string>
-    <string name="INTERNET_CONNECTION">There is Internet connection!</string>
-    <string name="NO_INTERNET_CONNECTION">There is no Internet connection!</string>
+    <string name="internet_connection">There is Internet connection!</string>
+    <string name="no_internet_connection">There is no Internet connection!</string>
+    <string name="turn_on_internet">Turn On Internet to enable image download functionality!</string>
 </resources>
