--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,10 +11,10 @@
     <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
     <string name="FLICKR_API_TAGS">android,oreo</string>
     <string name="FLICKR_API_LANG">en-us</string>
-    <string name="flickr_images_download">Flickr Pictures Download</string>
+    <string name="flickr_images_download">Flickr images Download</string>
     <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
-    <string name="pixabay_images_download">Pixabay Pictures Download</string>
+    <string name="pixabay_images_download">Pixabay images Download</string>
     <string name="my_friend">My Friend</string>
     <string name="internet_connection">There is Internet connection!</string>
     <string name="no_internet_connection">There is no Internet connection!</string>
