--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,22 +1,22 @@
 <resources>
     <string name="app_name">Bildalbum</string>
-    <string name="app_desc">The laziest way to build photo album</string>
+    <string name="app_desc">Build Your Photo Album</string>
     <string name="action_share">Share</string>
     <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
     <string name="FLICKR_API_TAGS">android,oreo</string>
     <string name="FLICKR_API_LANG">en-us</string>
-    <string name="flickr_images_download">Flickr images Download</string>
     <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
-    <string name="pixabay_images_download">Pixabay images Download</string>
-    <string name="check_internet_connection">Check Internet Connection and try again!</string>
+    <string name="download_from_flickr">Download from Flickr</string>
+    <string name="download_from_pixabay">Download from Pixabay</string>
+    <string name="check_internet_connection">Check Internet connection and try again!</string>
     <string name="choice_frame">Choice Frame</string>
     <string name="add_frame">Add Frame</string>
     <string name="save">Save</string>
-	<string name="facebook_share">Facebook Share</string>
-    <string name="install_facebook">Install Facebook for optimal experience.</string>
-    <string name="image_created">Image created.</string>
-    <string name="image_edited">Image edited.</string>
+	<string name="share">Share</string>
+    <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
+    <string name="image_created">Image created</string>
+    <string name="image_edited">Image edited</string>
     <string name="image_not_found">Image not found.</string>
     <string name="frame_dark_brown">Frame Dark Brown</string>
     <string name="frame_golden">Frame Golden</string>
