--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">Bildalbum</string>
-    <string name="app_desc">Build Your Photo Album</string>
+    <string name="app_name">BuildAlbum</string>
+    <string name="app_info">Build Your Photo Album</string>
+    <string name="app_web">https://buildalbum.photo.blog</string>
     <string name="action_share">Share</string>
     <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
     <string name="FLICKR_API_TAGS">android,oreo</string>
