--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,6 @@
     <string name="share">Share</string>
     <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
     <string name="image_saved">Image saved!</string>
-    <string name="picture_not_saved">Picture not saved!</string>
     <string name="internal_error">Internal Error!</string>
+    <string name="new_images_downloaded">new images downloaded!</string>
 </resources>
