Automate download images from Internet

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,6 @@
     <string name="FLICKR_API_LANG">en-us</string>
     <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
-    <string name="download_from_flickr">Download from Flickr</string>
-    <string name="download_from_pixabay">Download from Pixabay</string>
     <string name="check_internet_connection">Check Internet connection and try again!</string>
     <string name="image_size">400</string>
     <string name="image_size_border">100</string>
@@ -20,5 +18,5 @@
     <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
     <string name="image_saved">Image saved!</string>
     <string name="internal_error">Internal Error!</string>
-    <string name="new_images_downloaded">new images downloaded!</string>
+    <string name="new_images_downloaded">new images downloaded</string>
 </resources>
