--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="FLICKR_API_LANG">en-us</string>
     <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
+    <string name="take_picture">Take a Picture</string>
     <string name="enable_internet">Enable Internet to get fun images!</string>
     <string name="image_size">400</string>
     <string name="image_size_border">100</string>
@@ -17,5 +18,7 @@
     <string name="facebook_sharer">https://www.facebook.com/sharer/sharer.php?u=</string>
     <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
     <string name="image_saved">Image saved!</string>
-    <string name="internal_error">Internal Error!</string>
+    <string name="download_exception">Download Exception: </string>
+    <string name="download_images_ended">Download images ended!</string>
+    <string name="not_enough_space_on_disk">Not enough space on disk!</string>
 </resources>
