--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,13 +19,14 @@
     <string name="image_size">400</string>
     <string name="image_size_border">100</string>
     <string name="share">Share</string>
+    <string name="delete">Delete</string>
     <string name="com_facebook_katana">com.facebook.katana</string>
     <string name="facebook_sharer">https://www.facebook.com/sharer/sharer.php?u=</string>
     <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
     <string name="image_saved">Image saved!</string>
+    <string name="image_deleted">Image deleted!</string>
     <string name="download_exception">Download Exception: </string>
     <string name="download_images_ended">Download images ended!</string>
     <string name="not_enough_space_on_disk">Not enough space on disk!</string>
     <string name="no_image_is_picked_from_gallery">No image is picked from Gallery!</string>
-    <string name="allow_camera_and_gallery_permissions_to_add_image">Allow Camera and Gallery permissions to add image!</string>
 </resources>
