--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,16 +15,15 @@
     <string name="download_from_flickr">Download from Flickr</string>
     <string name="download_from_pixabay">Download from Pixabay</string>
     <string name="close">Close</string>
-    <string name="enable_internet">Enable Internet to get fun images!</string>
+    <string name="enable_internet">Enable Internet to get images!</string>
     <string name="share">Share</string>
-    <string name="delete">Delete</string>
     <string name="com_facebook_katana">com.facebook.katana</string>
     <string name="facebook_sharer">https://www.facebook.com/sharer/sharer.php?u=</string>
     <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
     <string name="image_saved">Image saved!</string>
+    <string name="delete">Delete</string>
     <string name="image_deleted">Image deleted!</string>
     <string name="download_exception">Download Exception: </string>
-    <string name="download_images_ended">Download images ended!</string>
     <string name="not_enough_space_on_disk">Not enough space on disk!</string>
     <string name="no_image_is_captured">No image is captured!</string>
 </resources>
