--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,23 @@
 <resources>
     <string name="app_name">Build Album</string>
-    <string name="app_info">Build Your Photo Album</string>
-    <string name="app_web">https://buildalbum.photo.blog</string>
-    <string name="FRAMES_URI">https://drive.google.com/uc?export=view&amp;id=1kituJ8bOZYybBydnECcy31Z7sg1Y2KG7</string>
-    <string name="FLICKR_API_URI">https://api.flickr.com/services/feeds/photos_public.gne</string>
-    <string name="FLICKR_API_TAGS">android,oreo</string>
-    <string name="FLICKR_API_LANG">en-us</string>
-    <string name="PIXABAY_API_URI">https://pixabay.com/api/</string>
-    <string name="PIXABAY_API_KEY">13310406-d6e15cf3e2d5c590fa44a6bea</string>
+    <string name="app_info">Build Your Album</string>
+    <string name="app_web" translatable="false">https://buildalbum.photo.blog</string>
+    <string name="FRAMES_URI" translatable="false">https://drive.google.com/uc?export=view&amp;id=1kituJ8bOZYybBydnECcy31Z7sg1Y2KG7</string>
+    <string name="FLICKR_API_URI" translatable="false">https://api.flickr.com/services/feeds/photos_public.gne</string>
+    <string name="PIXABAY_API_URI" translatable="false">https://pixabay.com/api/</string>
+    <string name="PIXABAY_API_KEY" translatable="false">13310406-d6e15cf3e2d5c590fa44a6bea</string>
     <string name="add_image">Add Image</string>
     <string name="take_photo">Take a Photo</string>
     <string name="choice_from_gallery">Choice from Gallery</string>
-    <string name="download_from_flickr">Download from Flickr</string>
-    <string name="download_from_pixabay">Download from Pixabay</string>
+    <string name="download_from_flickr" translatable="false">Download from Flickr</string>
+    <string name="download_from_pixabay" translatable="false">Download from Pixabay</string>
     <string name="close">Close</string>
-    <string name="share">Share</string>
-    <string name="com_facebook_katana">com.facebook.katana</string>
-    <string name="facebook_sharer">https://www.facebook.com/sharer/sharer.php?u=</string>
-    <string name="install_facebook_for_optimal_experience">Install Facebook for optimal experience!</string>
+    <string name="com_facebook_katana" translatable="false">com.facebook.katana</string>
+    <string name="facebook_sharer" translatable="false">https://www.facebook.com/sharer/sharer.php?u=</string>
+    <string name="install_facebook_for_optimal_experience">Install Facebook for best experience!</string>
     <string name="image_saved">Image saved!</string>
-    <string name="delete">Delete</string>
     <string name="image_deleted">Image deleted!</string>
-    <string name="download_exception">Download Exception: </string>
+    <string name="download_exception" translatable="false">Download Exception: </string>
     <string name="not_enough_space_on_disk">Not enough space on disk!</string>
     <string name="no_image_is_captured">No image is captured!</string>
     <string name="enable_internet_to_download_images">Enable Internet to download images!</string>
