--- a/app/src/main/res/values-bg-rBG/strings.xml
+++ b/app/src/main/res/values-bg-rBG/strings.xml
@@ -9,7 +9,7 @@
     <string name="image_deleted">Изображението е изтрито!</string>
     <string name="image_saved">Изображението е запазено!</string>
     <string name="install_facebook_for_optimal_experience">Инсталирай Facebook за най-добро изживяване!</string>
-    <string name="no_image_is_captured">Не бе избрано изображение!</string>
+    <string name="no_image_is_captured">Не е добавено изображение!</string>
     <string name="not_enough_space_on_disk">Недостатъчно място на диска!</string>
     <string name="take_photo">Снимай</string>
 </resources>
