--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,24 +6,30 @@
     <string name="FLICKR_API_URI" translatable="false">https://api.flickr.com/services/feeds/photos_public.gne</string>
     <string name="PIXABAY_API_URI" translatable="false">https://pixabay.com/api/</string>
     <string name="PIXABAY_API_KEY" translatable="false">13310406-d6e15cf3e2d5c590fa44a6bea</string>
-    <string name="image_add">Add Image</string>
-    <string name="take_photo">Take a Photo</string>
-    <string name="choice_from_gallery">Choice from Gallery</string>
-    <string name="download_from_flickr">Latest from Flickr</string>
-    <string name="download_from_pixabay">Latest from Pixabay</string>
+    <string name="download_failed">Download failed!</string>
+    <string name="progress_downloading">Downloading&#8230;</string>
+    <string name="progress_percentage" translatable="false">0 &#37;</string>
+    <string name="progress_saving">Saving&#8230;</string>
+    <string name="progress_sketch">Sketch</string>
+    <string name="enable_internet">Enable Internet to unlock hidden functionality!</string>
+    <string name="nothing_new_captured">Nothing new captured!</string>
+    <string name="download_completed">Download completed!</string>
+    <string name="image_added">Image added!</string>
     <string name="close">Close</string>
+    <string name="image_add">Add Image</string>
+    <string name="latest_from_pixabay">Latest from Pixabay</string>
+    <string name="latest_from_flickr">Latest from Flickr</string>
+    <string name="pick_from_gallery">Pick from Gallery</string>
+    <string name="take_photo">Take Photo</string>
+    <string name="latest_panes">Latest panes</string>
+    <string name="delete">Delete</string>
+    <string name="rotate">Rotate</string>
+    <string name="share">Share</string>
     <string name="com_facebook_katana" translatable="false">com.facebook.katana</string>
     <string name="facebook_sharer" translatable="false">https://www.facebook.com/sharer/sharer.php?u=</string>
     <string name="install_facebook_for_optimal_experience">Install Facebook for best experience!</string>
-    <string name="image_saved">Image is saved!</string>
-    <string name="image_deleted">Image is deleted!</string>
-    <string name="download_exception" translatable="false">Download Exception: </string>
-    <string name="not_enough_space_on_disk">Not enough space on disk!</string>
-    <string name="no_image_is_captured">No image is captured!</string>
-    <string name="enable_internet">Enable Internet to download images!</string>
-    <string name="image_delete">Delete Image</string>
-    <string name="image_rescued">Image is rescued!</string>
-    <string name="pane_added">Pane Added!</string>
-    <string name="downloading">Downloading&#8230;</string>
-    <string name="saving">Saving&#8230;</string>
+    <string name="image_edited">Image edited!</string>
+    <string name="image_deleted">Image deleted!</string>
+    <string name="image_rescued">Image rescued!</string>
+    <string name="image_edit">Edit Image</string>
 </resources>
